# gtest_demo

./: CMakeLists.txt  run.sh
source/: CMakeLists.txt  client.h  cov.cpp  printer.h
tests/: CMakeLists.txt  main.cpp  test.cpp
tests/feature-service/: example.cpp
